--- a/index.html
+++ b/index.html
@@ -1781,7 +1781,7 @@ iftttti:                               ,,,,,::,
                 </pre>
             </section>
         </div>
-        <div class="main-mobile" data-0="transform: translateY(0px)" data-100="transform: translateY(2000px)">
+        <div class="main-mobile">
             <header>
                 <pre class="logo-mobile">
  ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████ 
