--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
     </head>
         <div class="main-mobile">
-            <header>
+            <div>
                 <pre class="logo-mobile">
  ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████ 
 ███    ███ ███    ███ ███       ▄██▀▀▀███▀▀▀██▄   ███    ███   ███    ███ 
@@ -21,7 +21,7 @@
  ▀██████▀   ▀██████▀  █████▄▄██  ▀█   ███   █▀    ██████████   ███    ███ 
                       ▀                                        ███    ███ 
                 </pre>
-            </header>
+            </div>
             <p class="logo-text-mobile">To see the full version of the website,<br> open it on your computer</p>
             <div class="years-container-mobile">
                 <div class="years-21">
