--- a/index.html
+++ b/index.html
@@ -10,17 +10,7 @@
     </head>
         <div class="main-mobile">
             <div>
-                <pre class="logo-mobile">
-▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████
-███    ███ ███    ███ ███       ▄██▀▀▀███▀▀▀██▄   ███    ███   ███    ███
-███    ███ ███    ███ ███       ███   ███   ███   ███    █▀    ███    ███
-███    ███ ███    ███ ███       ███   ███   ███  ▄███▄▄▄      ▄███▄▄▄▄██▀
-███    ███ ███    ███ ███       ███   ███   ███ ▀▀███▀▀▀     ▀▀███▀▀▀▀▀
-███    ███ ███    ███ ███       ███   ███   ███   ███    █▄  ▀███████████
-███    ███ ███    ███ ███▌    ▄ ███   ███   ███   ███    ███   ███    ███
-▀██████▀   ▀██████▀  █████▄▄██  ▀█   ███   █▀    ██████████   ███    ███
-▀                                        ███    ███
-                </pre>
+                <pre class="logo-mobile"> ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████<br>███    ███ ███    ███ ███       ▄██▀▀▀███▀▀▀██▄   ███    ███   ███    ███<br>███    ███ ███    ███ ███       ███   ███   ███   ███    █▀    ███    ███<br>███    ███ ███    ███ ███       ███   ███   ███  ▄███▄▄▄      ▄███▄▄▄▄██▀<br>███    ███ ███    ███ ███       ███   ███   ███ ▀▀███▀▀▀     ▀▀███▀▀▀▀▀<br>███    ███ ███    ███ ███       ███   ███   ███   ███    █▄  ▀███████████<br>███    ███ ███    ███ ███▌    ▄ ███   ███   ███   ███    ███   ███    ███<br> ▀██████▀   ▀██████▀  █████▄▄██  ▀█   ███   █▀    ██████████   ███    ███<br>                      ▀                                        ███    ███<br></pre>
             </div>
             <p class="logo-text-mobile">To see the full version of the website,<br> open it on your computer</p>
             <div class="years-container-mobile">
