--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
     </head>
         <div class="main-mobile">
             <div>
-                <pre class="logo-mobile">
- ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████
-███    ███ ███    ███ ███       ▄██▀▀▀███▀▀▀██▄   ███    ███   ███    ███
-███    ███ ███    ███ ███       ███   ███   ███   ███    █▀    ███    ███
-███    ███ ███    ███ ███       ███   ███   ███  ▄███▄▄▄      ▄███▄▄▄▄██▀
-███    ███ ███    ███ ███       ███   ███   ███ ▀▀███▀▀▀     ▀▀███▀▀▀▀▀
-███    ███ ███    ███ ███       ███   ███   ███   ███    █▄  ▀███████████
-███    ███ ███    ███ ███▌    ▄ ███   ███   ███   ███    ███   ███    ███
- ▀██████▀   ▀██████▀  █████▄▄██  ▀█   ███   █▀    ██████████   ███    ███
-                      ▀                                        ███    ███<br></pre>
+                <pre class="logo-mobile"> ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████
+					 ███    ███ ███    ███ ███       ▄██▀▀▀███▀▀▀██▄   ███    ███   ███    ███
+					 ███    ███ ███    ███ ███       ███   ███   ███   ███    █▀    ███    ███
+ 					 ███    ███ ███    ███ ███       ███   ███   ███  ▄███▄▄▄      ▄███▄▄▄▄██▀
+					 ███    ███ ███    ███ ███       ███   ███   ███ ▀▀███▀▀▀     ▀▀███▀▀▀▀▀
+					 ███    ███ ███    ███ ███       ███   ███   ███   ███    █▄  ▀███████████
+					 ███    ███ ███    ███ ███▌    ▄ ███   ███   ███   ███    ███   ███    ███
+					  ▀██████▀   ▀██████▀  █████▄▄██  ▀█   ███   █▀    ██████████   ███    ███
+                      					       ▀                                        ███    ███<br></pre>
             </div>
             <p class="logo-text-mobile">To see the full version of the website,<br> open it on your computer</p>
             <div class="years-container-mobile">
