--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 
                 <pre class="logo-mobile">
- ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████
-███    ███ ███    ███ ███       ▄██▀▀▀███▀▀▀██▄   ███    ███   ███    ███
-███    ███ ███    ███ ███       ███   ███   ███   ███    █▀    ███    ███
-███    ███ ███    ███ ███       ███   ███   ███  ▄███▄▄▄      ▄███▄▄▄▄██▀
-███    ███ ███    ███ ███       ███   ███   ███ ▀▀███▀▀▀     ▀▀███▀▀▀▀▀
-███    ███ ███    ███ ███       ███   ███   ███   ███    █▄  ▀███████████
-███    ███ ███    ███ ███▌    ▄ ███   ███   ███   ███    ███   ███    ███
- ▀██████▀   ▀██████▀  █████▄▄██  ▀█   ███   █▀    ██████████   ███    ███
-                      ▀                                        ███    ███</pre>
+██    ██  ██████  ██      ███    ███ ███████ ██████
+██    ██ ██    ██ ██      ████  ████ ██      ██   ██
+██    ██ ██    ██ ██      ██ ████ ██ █████   ██████
+ ██  ██  ██    ██ ██      ██  ██  ██ ██      ██   ██
+  ████    ██████  ███████ ██      ██ ███████ ██   ██ </pre>
                     <pre class="y21-mobile">
-    _______  ________    _______   _____       
+  _______  ________    _______   _____       
  /  ___  \|\   __  \  /  ___  \ / __  \    
 /__/|_/  /\ \  \|\  \/__/|_/  /|\/_|\  \   
 |__|//  / /\ \  \\\  \__|//  / ||/ \ \  \  
@@ -36,19 +32,17 @@
 	            <pre class="wanted-logo-mobile">
 
  
- ██╗    ██╗ █████╗ ███╗   ██╗████████╗███████╗██████╗
- ██║    ██║██╔══██╗████╗  ██║╚══██╔══╝██╔════╝██╔══██╗
- ██║ █╗ ██║███████║██╔██╗ ██║   ██║   █████╗  ██║  ██║
- ██║███╗██║██╔══██║██║╚██╗██║   ██║   ██╔══╝  ██║  ██║
- ╚███╔███╔╝██║  ██║██║ ╚████║   ██║   ███████╗██████╔╝
-  ╚══╝╚══╝ ╚═╝  ╚═╝╚═╝  ╚═══╝   ╚═╝   ╚══════╝╚═════╝
-                                                             
-  ██╗   ██╗ ██████╗ ██╗     ███╗   ███╗███████╗██████╗ 
-  ██║   ██║██╔═══██╗██║     ████╗ ████║██╔════╝██╔══██╗
-  ██║   ██║██║   ██║██║     ██╔████╔██║█████╗  ██████╔╝
-  ╚██╗ ██╔╝██║   ██║██║     ██║╚██╔╝██║██╔══╝  ██╔══██╗
-   ╚████╔╝ ╚██████╔╝███████╗██║ ╚═╝ ██║███████╗██║  ██║
-    ╚═══╝   ╚═════╝ ╚══════╝╚═╝     ╚═╝╚══════╝╚═╝  ╚═╝
+ ██     ██  █████  ███    ██ ████████ ███████ ██████  
+ ██     ██ ██   ██ ████   ██    ██    ██      ██   ██ 
+ ██  █  ██ ███████ ██ ██  ██    ██    █████   ██   ██ 
+ ██ ███ ██ ██   ██ ██  ██ ██    ██    ██      ██   ██ 
+  ███ ███  ██   ██ ██   ████    ██    ███████ ██████  
+                                                                                                          
+ ██    ██  ██████  ██      ███    ███ ███████ ██████
+ ██    ██ ██    ██ ██      ████  ████ ██      ██   ██
+ ██    ██ ██    ██ ██      ██ ████ ██ █████   ██████
+  ██  ██  ██    ██ ██      ██  ██  ██ ██      ██   ██
+   ████    ██████  ███████ ██      ██ ███████ ██   ██ 
 
                                                   
 
@@ -58,7 +52,7 @@
   ##     ## ######   ##     ## ##     ##    ##     ## ########     ##     ## ##        ##  ##     ## ######   
   ##     ## ##       ######### ##     ##    ##     ## ##   ##      ######### ##        ##   ##   ##  ##       
   ##     ## ##       ##     ## ##     ##    ##     ## ##    ##     ##     ## ##        ##    ## ##   ##       
- ########  ######## ##     ## ########      #######  ##     ##    ##     ## ######## ####    ###    ########</pre> 
+  ########  ######## ##     ## ########      #######  ##     ##    ##     ## ######## ####    ###    ########</pre> 
 
 <pre class="wanted-skills-mobile">
                            Skills:
