--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<div class="main-mobile">
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Volmer</title>
+        <link rel="icon" href="img/shrug.ico" type="image/x-icon">
+        <link rel="stylesheet" href="css/style.css">
+        <link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
+    </head>
+    <body>
+	<div class="main-mobile">
             <div>
                 <pre class="logo-mobile">
 888     888  .d88888b.  888      888b     d888 8888888888 8888888b.
@@ -162,3 +173,5 @@ Y88b   d88P 888     888 888      888Y88888P888 8888888    888   d88P
                 </pre>
             </footer>
         </div>
+    </body>
+</html>
