--- a/index.html
+++ b/index.html
@@ -1758,12 +1758,12 @@ iftttti:                               ,,,,,::,
             </div>
             <section class="ursec-container-comp">
                 <div class="usurt-logo">
-                    <a class="cat-gif-1680" href="playroom.html"><img src="img/cat.gif"  width="200px" height="200px"></a>
-                    <a class="cat-gif-1024" href="playroom.html"><img src="img/cat.gif"  width="130px" height="130px"></a>
-                    <a class="cat-gif-1280" href="playroom.html"><img src="img/cat.gif"  width="170px" height="170px"></a>
-                    <a class="cat-gif-1440" href="playroom.html"><img src="img/cat.gif"  width="180px" height="180px"></a>
-                    <a class="cat-gif-1920" href="playroom.html"><img src="img/cat.gif"  width="220px" height="220px"></a>
-                    <a class="cat-gif-2560" href="playroom.html"><img src="img/cat.gif"  width="300px" height="300px"></a>
+                    <a class="cat-gif-1680" href="playroom.html"><img class="cat-gif-selection-1024" src="img/cat.gif"  width="200px" height="200px"></a>
+                    <a class="cat-gif-1024" href="playroom.html"><img class="cat-gif-selection-1280" src="img/cat.gif"  width="130px" height="130px"></a>
+                    <a class="cat-gif-1280" href="playroom.html"><img class="cat-gif-selection-1440" src="img/cat.gif"  width="170px" height="170px"></a>
+                    <a class="cat-gif-1440" href="playroom.html"><img class="cat-gif-selection-1680" src="img/cat.gif"  width="180px" height="180px"></a>
+                    <a class="cat-gif-1920" href="playroom.html"><img class="cat-gif-selection-1920" src="img/cat.gif"  width="220px" height="220px"></a>
+                    <a class="cat-gif-2560" href="playroom.html"><img class="cat-gif-selection-2560" src="img/cat.gif"  width="300px" height="300px"></a>
                 </div>
                 <div class="usurt-date">
                     <button href="#" class="usurt-2021"><pre>
