--- a/playroom.html
+++ b/playroom.html
@@ -64,7 +64,7 @@
 |_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _|/
                 </pre>
                 <div>
-                    <button id="second-patern"><pre> ___ <br>|   |<br>|___|</pre></button>
+                    <button class="btn-enable-selection" id="second-patern"><pre> ___ <br>|   |<br>|___|</pre></button>
                     <pre style="font-size: 12px; text-align: start; margin-top: 100%" class="logo">
                  ▄█▄
                 ▄███▄
