--- a/playroom.html
+++ b/playroom.html
@@ -543,5 +543,14 @@
 			addEventListener(`keydown`, keyUpdate)
 			addEventListener(`keyup`, keyUpdate)
         </script>
+        <script type="text/javascript">
+            (function titleScroller(text) {
+                document.title = text;
+                console.log(text);
+                setTimeout(function () {
+                    titleScroller(text.substr(1) + text.substr(0, 1));
+                }, 500);
+            }(" Playroom "));
+        </script>
     </body>
 </html>
