--- a/playroom.html
+++ b/playroom.html
@@ -579,5 +579,44 @@
                 }, 500);
             }(" Playroom "));
         </script>
+	<script type="text/javascript">
+		document.addEventListener('keydown', function(event) {
+			if (event.key === 's' || event.key === 'S' || event.key ==='ы' || event.key === 'Ы') {
+				var animatedDiv = document.getElementById('gamepad-S');
+				animatedDiv.classList.add('gamepad-S-click');
+				setTimeout(function() {
+					animatedDiv.classList.remove('gamepad-S-click');
+				}, 500);
+			}
+			if (event.key === 'ArrowUp') {
+				var animatedDiv = document.getElementById('gamepad-up');
+				animatedDiv.classList.add('gamepad-up');
+				setTimeout(function() {
+					animatedDiv.classList.remove('gamepad-up');
+				}, 500);
+			}
+			if (event.key === 'ArrowLeft') {
+				var animatedDiv = document.getElementById('gamepad-left');
+				animatedDiv.classList.add('gamepad-left');
+				setTimeout(function() {
+					animatedDiv.classList.remove('gamepad-left');
+				}, 500);
+			}
+			if (event.key === 'ArrowRight') {
+				var animatedDiv = document.getElementById('gamepad-right');
+				animatedDiv.classList.add('gamepad-right');
+				setTimeout(function() {
+					animatedDiv.classList.remove('gamepad-right');
+				}, 500);
+			}
+			if (event.key === 'ArrowDown') {
+				var animatedDiv = document.getElementById('gamepad-down');
+				animatedDiv.classList.add('gamepad-down');
+				setTimeout(function() {
+					animatedDiv.classList.remove('gamepad-down');
+				}, 500);
+			}
+		});
+	</script>
     </body>
 </html>
