--- a/links.html
+++ b/links.html
@@ -74,7 +74,7 @@
         </div>
         <footer style="font-size: 12px;">
             <p style="text-align:center ;font-size: 12px; margin-top: 50px" class="glitch">Так же можете ознакомиться с сайтами администраторов</p>
-            <div style="font-size: 12px; display: flex; margin-top: 15px">
+            <div style="font-size: 12px; display: flex; justify-content: space-around; margin-top: 15px">
                 <a style="display: flex; flex-direction: row; justify-content: flex-start; align-items: center; width: 150px; padding: 5px 0px 5px 0px" href="https://patriciasmashp.github.io">
                     <img src="img/pepefrg-8.gif" height="30px" width="30px">
                     <div style="margin-left: 5px;" style="--stacks: 3;" class="stack">
