--- a/links.html
+++ b/links.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.cdnfonts.com/css/pixeleum-48" rel="stylesheet">
         <link rel="stylesheet" href="css/link.css">
     </head>
-    <body style="overflow-x: hidden ;font-family: 'Pixeleum 48', sans-serif; margin-top: 90px">
+    <body style="overflow-x: hidden ;font-family: 'Pixeleum 48', sans-serif; margin-top: 80px">
         <header>
             <div style="font-size: 2.5px; display: flex; justify-content: center; margin-top: 40px; margin-bottom:30px">
                 <pre>
@@ -44,7 +44,7 @@
             <div style="margin-top: 15px">
                 <a style="display: flex; flex-direction: row; justify-content: space-around; align-items: center; border: 1px dashed #00ff00; border-radius: 15px; width: 150px; padding: 5px 0px 5px 0px" href="https://vk.com/urs3c">
                     <img src="img/vk-256.ico" height="16px" width="16px">
-                    <div style="margin-left: 5px;" style="--stacks: 3;" class="stack">
+                    <div style="margin-left: 5px;" style="--stacks: 3;" class="Stack">
                         <span style="--index: 0;">VKontakte</span>
                         <span style="--index: 1;">VKontakte</span>
                         <span style="--index: 2;">VKontakte</span>
@@ -54,7 +54,7 @@
             <div style="margin-top: 10px; font-size: 12px;">
                 <a style="display: flex; flex-direction: row; justify-content: space-around; align-items: center; border: 1px dashed #00ff00; border-radius: 15px; width: 150px; padding: 5px 0px 5px 0px" href="https://t.me/+I4-PfJdkFqVjZjMy">
                     <img src="img/telegram-256.ico" height="16px" width="16px">
-                    <div style="margin-left: 5px;" style="--stacks: 3;" class="stack">
+                    <div style="margin-left: 5px;" style="--stacks: 3;" class="Stack">
                         <span style="--index: 0;">Telegram</span>
                         <span style="--index: 1;">Telegram</span>
                         <span style="--index: 2;">Telegram</span>
@@ -64,7 +64,7 @@
             <div style="margin-top: 10px; font-size: 12px;">
                 <a style="display: flex; flex-direction: row; justify-content: space-around; align-items: center; border: 1px dashed #00ff00; border-radius: 15px; width: 150px; padding: 5px 0px 5px 0px" href="https://www.youtube.com/channel/UCHwWQ61eiqgv8TN6fDvE_wg">
                     <img src="img/youtube-256.ico" height="16px" width="16px">
-                    <div style="margin-left: 5px;" style="--stacks: 3;" class="stack">
+                    <div style="margin-left: 5px;" style="--stacks: 3;" class="Stack">
                         <span style="--index: 0;">YouTube</span>
                         <span style="--index: 1;">YouTube</span>
                         <span style="--index: 2;">YouTube</span>
@@ -77,14 +77,14 @@
             <div style="font-size: 12px; display: flex; justify-content: space-around; margin-top: 15px">
                 <a style="display: flex; flex-direction: row; justify-content: flex-start; align-items: center; width: 150px; padding: 5px 0px 5px 0px" href="https://patriciasmashp.github.io">
                     <img src="img/pepefrg-8.gif" height="30px" width="30px">
-                    <div style="margin-left: 5px;" style="--stacks: 3;" class="stack">
+                    <div style="margin-left: 5px;" style="--stacks: 3;" class="Stack">
                         <span style="--index: 0;">patriciasmashp</span>
                         <span style="--index: 1;">patriciasmashp</span>
                         <span style="--index: 2;">patriciasmashp</span>
                     </div>
                 </a>
                 <a style="display: flex; flex-direction: row; justify-content: flex-end; align-items: center; width: 150px; padding: 5px 0px 5px 0px" href="https://v0lmer.xyz">
-                    <div style="margin-left: 5px;" style="--stacks: 3;" class="stack">
+                    <div style="margin-left: 5px;" style="--stacks: 3;" class="Stack">
                         <span style="--index: 0;">V0lmer</span>
                         <span style="--index: 1;">V0lmer</span>
                         <span style="--index: 2;">V0lmer</span>
