--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </div>
                 <section class="usurt-main">
                     <div class="dvd">
-                        <a href="ursec.html">
+                        <a href="https://v0lmer.xyz/ursec">
                         <pre class="dvd-date">
 __  _ __ __ 
  _)/ \ _) _)
@@ -282,7 +282,7 @@ iftttti:                               ,,,,,::,
                     <div class="content content_logo">
                         <pre class="card-container">
                                 <p class="card-dev">(Still under development)</p>
- ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████ 
+<a href="https://v0lmer.xyz/navigation" class="v0lmer_nav"> ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████ 
 ███    ███ ███    ███ ███       ▄██▀▀▀███▀▀▀██▄   ███    ███   ███    ███ 
 ███    ███ ███    ███ ███       ███   ███   ███   ███    █▀    ███    ███ 
 ███    ███ ███    ███ ███       ███   ███   ███  ▄███▄▄▄      ▄███▄▄▄▄██▀ 
@@ -290,7 +290,7 @@ iftttti:                               ,,,,,::,
 ███    ███ ███    ███ ███       ███   ███   ███   ███    █▄  ▀███████████ 
 ███    ███ ███    ███ ███▌    ▄ ███   ███   ███   ███    ███   ███    ███ 
  ▀██████▀   ▀██████▀  █████▄▄██  ▀█   ███   █▀    ██████████   ███    ███ 
-                      ▀                                        ███    ███ 
+                      ▀                                        ███    ███ </a>
                         </pre>
                     </div> 
                     <div class="atemtion glitch" data-0="transform:translateY(0px)" data-100="transform:translateY(300px)">
@@ -430,7 +430,7 @@ iftttti:                               ,,,,,::,
                 </div>
                 <section class="usurt-main">
                     <div class="dvd">
-                        <a href="ursec.html">
+                        <a href="https://v0lmer.xyz/ursec">
                         <pre class="dvd-date">
 __  _ __ __ 
  _)/ \ _) _)
@@ -575,7 +575,7 @@ iftttti:                               ,,,,,::,
                     <div class="content content_logo">
                         <pre class="card-container">
                                 <p class="card-dev">(Still under development)</p>
- ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████ 
+<a href="https://v0lmer.xyz/navigation" class="v0lmer_nav"> ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████ 
 ███    ███ ███    ███ ███       ▄██▀▀▀███▀▀▀██▄   ███    ███   ███    ███ 
 ███    ███ ███    ███ ███       ███   ███   ███   ███    █▀    ███    ███ 
 ███    ███ ███    ███ ███       ███   ███   ███  ▄███▄▄▄      ▄███▄▄▄▄██▀ 
@@ -583,7 +583,7 @@ iftttti:                               ,,,,,::,
 ███    ███ ███    ███ ███       ███   ███   ███   ███    █▄  ▀███████████ 
 ███    ███ ███    ███ ███▌    ▄ ███   ███   ███   ███    ███   ███    ███ 
  ▀██████▀   ▀██████▀  █████▄▄██  ▀█   ███   █▀    ██████████   ███    ███ 
-                      ▀                                        ███    ███ 
+                      ▀                                        ███    ███ </a>
                         </pre>
                     </div> 
                     <div class="atemtion glitch" data-0="transform:translateY(0px)" data-100="transform:translateY(300px)">
@@ -723,7 +723,7 @@ iftttti:                               ,,,,,::,
                 </div>
                 <section class="usurt-main">
                     <div class="dvd">
-                        <a href="ursec.html">
+                        <a href="https://v0lmer.xyz/ursec">
                         <pre class="dvd-date">
 __  _ __ __ 
  _)/ \ _) _)
@@ -868,7 +868,7 @@ iftttti:                               ,,,,,::,
                     <div class="content content_logo">
                         <pre class="card-container">
                                 <p class="card-dev">(Still under development)</p>
- ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████ 
+<a href="https://v0lmer.xyz/navigation" class="v0lmer_nav"> ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████ 
 ███    ███ ███    ███ ███       ▄██▀▀▀███▀▀▀██▄   ███    ███   ███    ███ 
 ███    ███ ███    ███ ███       ███   ███   ███   ███    █▀    ███    ███ 
 ███    ███ ███    ███ ███       ███   ███   ███  ▄███▄▄▄      ▄███▄▄▄▄██▀ 
@@ -876,7 +876,7 @@ iftttti:                               ,,,,,::,
 ███    ███ ███    ███ ███       ███   ███   ███   ███    █▄  ▀███████████ 
 ███    ███ ███    ███ ███▌    ▄ ███   ███   ███   ███    ███   ███    ███ 
  ▀██████▀   ▀██████▀  █████▄▄██  ▀█   ███   █▀    ██████████   ███    ███ 
-                      ▀                                        ███    ███ 
+                      ▀                                        ███    ███ </a>
                         </pre>
                     </div> 
                     <div class="atemtion glitch" data-0="transform:translateY(0px)" data-100="transform:translateY(300px)">
@@ -1016,7 +1016,7 @@ iftttti:                               ,,,,,::,
                 </div>
                 <section class="usurt-main">
                     <div class="dvd">
-                        <a href="ursec.html">
+                        <a href="https://v0lmer.xyz/ursec">
                         <pre class="dvd-date">
 __  _ __ __ 
  _)/ \ _) _)
@@ -1161,7 +1161,7 @@ iftttti:                               ,,,,,::,
                     <div class="content content_logo">
                         <pre class="card-container">
                                 <p class="card-dev">(Still under development)</p>
- ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████ 
+<a href="https://v0lmer.xyz/navigation" class="v0lmer_nav"> ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████ 
 ███    ███ ███    ███ ███       ▄██▀▀▀███▀▀▀██▄   ███    ███   ███    ███ 
 ███    ███ ███    ███ ███       ███   ███   ███   ███    █▀    ███    ███ 
 ███    ███ ███    ███ ███       ███   ███   ███  ▄███▄▄▄      ▄███▄▄▄▄██▀ 
@@ -1169,7 +1169,7 @@ iftttti:                               ,,,,,::,
 ███    ███ ███    ███ ███       ███   ███   ███   ███    █▄  ▀███████████ 
 ███    ███ ███    ███ ███▌    ▄ ███   ███   ███   ███    ███   ███    ███ 
  ▀██████▀   ▀██████▀  █████▄▄██  ▀█   ███   █▀    ██████████   ███    ███ 
-                      ▀                                        ███    ███ 
+                      ▀                                        ███    ███ </a>
                         </pre>
                     </div> 
                     <div class="atemtion glitch" data-0="transform:translateY(0px)" data-100="transform:translateY(300px)">
@@ -1310,7 +1310,7 @@ iftttti:                               ,,,,,::,
                 </div>
                 <section class="usurt-main">
                     <div class="dvd">
-                        <a href="ursec.html">
+                        <a href="https://v0lmer.xyz/ursec">
                         <pre class="dvd-date">
 __  _ __ __ 
  _)/ \ _) _)
@@ -1455,7 +1455,7 @@ iftttti:                               ,,,,,::,
                     <div class="content content_logo">
                         <pre class="card-container">
                                 <p class="card-dev">(Still under development)</p>
- ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████ 
+<a href="https://v0lmer.xyz/navigation" class="v0lmer_nav"> ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████ 
 ███    ███ ███    ███ ███       ▄██▀▀▀███▀▀▀██▄   ███    ███   ███    ███ 
 ███    ███ ███    ███ ███       ███   ███   ███   ███    █▀    ███    ███ 
 ███    ███ ███    ███ ███       ███   ███   ███  ▄███▄▄▄      ▄███▄▄▄▄██▀ 
@@ -1463,7 +1463,7 @@ iftttti:                               ,,,,,::,
 ███    ███ ███    ███ ███       ███   ███   ███   ███    █▄  ▀███████████ 
 ███    ███ ███    ███ ███▌    ▄ ███   ███   ███   ███    ███   ███    ███ 
  ▀██████▀   ▀██████▀  █████▄▄██  ▀█   ███   █▀    ██████████   ███    ███ 
-                      ▀                                        ███    ███ 
+                      ▀                                        ███    ███ </a>
                         </pre>
                     </div> 
                     <div class="atemtion glitch" data-0="transform:translateY(0px)" data-100="transform:translateY(300px)">
@@ -1604,7 +1604,7 @@ iftttti:                               ,,,,,::,
                 </div>
                 <section class="usurt-main">
                     <div class="dvd">
-                        <a href="ursec.html">
+                        <a href="https://v0lmer.xyz/ursec">
                         <pre class="dvd-date">
 __  _ __ __ 
  _)/ \ _) _)
@@ -1749,7 +1749,7 @@ iftttti:                               ,,,,,::,
                     <div class="content content_logo">
                         <pre class="card-container">
                                 <p class="card-dev">(Still under development)</p>
- ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████ 
+<a href="https://v0lmer.xyz/navigation" class="v0lmer_nav"> ▄█    █▄   ▄██████▄   ▄█         ▄▄▄▄███▄▄▄▄      ▄████████    ▄████████ 
 ███    ███ ███    ███ ███       ▄██▀▀▀███▀▀▀██▄   ███    ███   ███    ███ 
 ███    ███ ███    ███ ███       ███   ███   ███   ███    █▀    ███    ███ 
 ███    ███ ███    ███ ███       ███   ███   ███  ▄███▄▄▄      ▄███▄▄▄▄██▀ 
@@ -1757,7 +1757,7 @@ iftttti:                               ,,,,,::,
 ███    ███ ███    ███ ███       ███   ███   ███   ███    █▄  ▀███████████ 
 ███    ███ ███    ███ ███▌    ▄ ███   ███   ███   ███    ███   ███    ███ 
  ▀██████▀   ▀██████▀  █████▄▄██  ▀█   ███   █▀    ██████████   ███    ███ 
-                      ▀                                        ███    ███ 
+                      ▀                                        ███    ███ </a>
                         </pre>
                     </div> 
                     <div class="atemtion glitch" data-0="transform:translateY(0px)" data-100="transform:translateY(300px)">
@@ -1773,12 +1773,12 @@ iftttti:                               ,,,,,::,
             </div>
             <section class="ursec-container-comp">
                 <div class="usurt-logo">
-                    <a class="cat-gif-1680" href="playroom.html"><img class="cat-gif-selection-1024" src="img/cat.gif"  width="200px" height="200px"></a>
-                    <a class="cat-gif-1024" href="playroom.html"><img class="cat-gif-selection-1280" src="img/cat.gif"  width="130px" height="130px"></a>
-                    <a class="cat-gif-1280" href="playroom.html"><img class="cat-gif-selection-1440" src="img/cat.gif"  width="170px" height="170px"></a>
-                    <a class="cat-gif-1440" href="playroom.html"><img class="cat-gif-selection-1680" src="img/cat.gif"  width="180px" height="180px"></a>
-                    <a class="cat-gif-1920" href="playroom.html"><img class="cat-gif-selection-1920" src="img/cat.gif"  width="220px" height="220px"></a>
-                    <a class="cat-gif-2560" href="playroom.html"><img class="cat-gif-selection-2560" src="img/cat.gif"  width="300px" height="300px"></a>
+                    <a class="cat-gif-1680" href="https://v0lmer.xyz/playroom"><img class="cat-gif-selection-1024" src="img/cat.gif"  width="200px" height="200px"></a>
+                    <a class="cat-gif-1024" href="https://v0lmer.xyz/playroom"><img class="cat-gif-selection-1280" src="img/cat.gif"  width="130px" height="130px"></a>
+                    <a class="cat-gif-1280" href="https://v0lmer.xyz/playroom"><img class="cat-gif-selection-1440" src="img/cat.gif"  width="170px" height="170px"></a>
+                    <a class="cat-gif-1440" href="https://v0lmer.xyz/playroom"><img class="cat-gif-selection-1680" src="img/cat.gif"  width="180px" height="180px"></a>
+                    <a class="cat-gif-1920" href="https://v0lmer.xyz/playroom"><img class="cat-gif-selection-1920" src="img/cat.gif"  width="220px" height="220px"></a>
+                    <a class="cat-gif-2560" href="https://v0lmer.xyz/playroom"><img class="cat-gif-selection-2560" src="img/cat.gif"  width="300px" height="300px"></a>
                 </div>
                 <div class="usurt-date">
                     <button href="#" class="usurt-2021"><pre>
