--- a/playroom.html
+++ b/playroom.html
@@ -133,8 +133,8 @@
 			</pre>
 		</div>
 		<footer class="playroom-footer">
-			<a href="ursec.html"><<< --- Back to UrSec page</a>
-			<a href="index.html">Back to Main page --- >>></a>
+			<a href="https://v0lmer.xyz/ursec"><<< --- Back to UrSec page</a>
+			<a href="https://v0lmer.xyz">Back to Main page --- >>></a>
 		</footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
         <script>
