--- a/ursec.html
+++ b/ursec.html
@@ -305,10 +305,10 @@
                 <button id="btn-img" class="btn-img glitch">=clicking here=</a></button>
         </div>
         <footer class="ursec-footer">
-            <a href="index.html">
+            <a href="https://v0lmer.xyz">
                 <<< ---- Back to main page
             </a>
-            <a href="playroom.html">
+            <a href="https://v0lmer.xyz/playroom">
                 Go to playroom ---- >>>
             </a>
         </footer>
