--- a/navigation.html
+++ b/navigation.html
@@ -400,5 +400,14 @@
                 }
               }
         </script>
+        <script type="text/javascript">
+                    (function titleScroller(text) {
+                        document.title = text;
+                        console.log(text);
+                        setTimeout(function () {
+                            titleScroller(text.substr(1) + text.substr(0, 1));
+                        }, 500);
+                    }(" Navigation "));
+        </script>
     </body>
 </html>
