--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ iftttti:                               ,,,,,::,
 </font></pre></div>
 <script type="text/javascript" src="js/city.js"></script>
                 </section>
-                <section class="logo" data-0="color:rgb(0,255,0)" data-100="color:rgb(0,0,0)">
+                <section class="logo" data-0="color:rgb(0,255,0; opacity: 1)" data-100="color:rgb(0,0,0; opacity: 0)">
                     <div class="content content_logo">
                         <pre class="card-container">
                                 <p class="card-dev">(Still under development)</p>
@@ -571,7 +571,7 @@ iftttti:                               ,,,,,::,
 </font></pre></div>
 <script type="text/javascript" src="js/city.js"></script>
                 </section>
-                <section class="logo" data-0="color:rgb(0,255,0)" data-100="color:rgb(0,0,0)">
+                <section class="logo" data-0="color:rgb(0,255,0; opacity: 1)" data-100="color:rgb(0,0,0; opacity: 0)">
                     <div class="content content_logo">
                         <pre class="card-container">
                                 <p class="card-dev">(Still under development)</p>
@@ -864,7 +864,7 @@ iftttti:                               ,,,,,::,
 </font></pre></div>
 <script type="text/javascript" src="js/city.js"></script>
                 </section>
-                <section class="logo" data-0="color:rgb(0,255,0)" data-100="color:rgb(0,0,0)">
+                <section class="logo" data-0="color:rgb(0,255,0; opacity: 1)" data-100="color:rgb(0,0,0; opacity: 0)">
                     <div class="content content_logo">
                         <pre class="card-container">
                                 <p class="card-dev">(Still under development)</p>
@@ -1157,7 +1157,7 @@ iftttti:                               ,,,,,::,
 </font></pre></div>
 <script type="text/javascript" src="js/city.js"></script>
                 </section>
-                <section class="logo" data-0="color:rgb(0,255,0)" data-100="color:rgb(0,0,0)">
+                <section class="logo" data-0="color:rgb(0,255,0; opacity: 1)" data-100="color:rgb(0,0,0; opacity: 0)">
                     <div class="content content_logo">
                         <pre class="card-container">
                                 <p class="card-dev">(Still under development)</p>
@@ -1451,7 +1451,7 @@ iftttti:                               ,,,,,::,
 </font></pre></div>
 <script type="text/javascript" src="js/city.js"></script>
                 </section>
-                <section class="logo" data-0="color:rgb(0,255,0)" data-100="color:rgb(0,0,0)">
+                <section class="logo" data-0="color:rgb(0,255,0; opacity: 1)" data-100="color:rgb(0,0,0; opacity: 0)">
                     <div class="content content_logo">
                         <pre class="card-container">
                                 <p class="card-dev">(Still under development)</p>
@@ -1745,7 +1745,7 @@ iftttti:                               ,,,,,::,
 </font></pre></div>
 <script type="text/javascript" src="js/city.js"></script>
                 </section>
-                <section class="logo" data-0="color:rgb(0,255,0)" data-100="color:rgb(0,0,0)">
+                <section class="logo" data-0="color:rgb(0,255,0; opacity: 1)" data-100="color:rgb(0,0,0; opacity: 0)">
                     <div class="content content_logo">
                         <pre class="card-container">
                                 <p class="card-dev">(Still under development)</p>
