--- a/navigation.html
+++ b/navigation.html
@@ -195,7 +195,7 @@
                             <div class="Properties_Info" style="font-size: 12px;">
                                 <p>Type: Image</p>
                                 <p>Format: Image JPEG</p>
-                                <p>Name: V0lmer.html</p>
+                                <p>Name: Logo.jpg</p>
                                 <p>Path: Navigation/V0lmer/UrSec/Logo.jpg</p>
                                 <p>Size: 483 KB</p>
                                 <p>Sizes: 400 &#x2715; 262</p>
